--- a/RentCarDocument.csproj
+++ b/RentCarDocument.csproj
@@ -98,6 +98,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Car.cs" />
     <Compile Include="CarBrand.cs" />
     <Compile Include="CarModel.cs" />
     <Compile Include="DataBase.cs" />
