Feature: Statistics form finished

--- a/RentCarDocument.csproj
+++ b/RentCarDocument.csproj
@@ -108,6 +108,7 @@
   <ItemGroup>
     <Compile Include="Accessories.cs" />
     <Compile Include="Agreement.cs" />
+    <Compile Include="AverageValues.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="CarBrand.cs" />
     <Compile Include="CarModel.cs" />
